# GUI-PRM

./: .env.example  .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml  requirements-server.txt  requirements.txt
configs/: default.yaml  scorer_qwen2_5_vl_lora.yaml
docs/: route_b_completion_plan.md  seeclick_alignment.md  server_training_setup.md  ui_r1_alignment.md  v1_v2_badcase_report.md
examples/: demo_episodes.jsonl
scripts/: build_preferences.py  build_scorer_dataset.py  build_v3_scorer_ablation_datasets.py  compare_scorer_runs.py  download_aitw_single_sample.py  dry_run_v3_negative_filter.py  evaluate_qwen_vl_scorer.py  evaluate_rule_reward_on_pairs.py  export_badcase_review.py  inspect_raw_records.py  inspect_scorer_errors.py  normalize_steps.py  parse_episodes.py  prepare_aitw_single_sample.py  prepare_scorer_experiment.py  reprocess_aitw_single_raw.py  rerank_candidates.py  run_audit.py  select_qdd_samples.py  split_by_instruction.py  split_scorer_dataset.py  summarize_preference_pairs.py  summarize_scorer_dataset.py  summarize_scorer_predictions.py  summarize_steps.py  train_qwen_vl_scorer.py  verify_training_environment.py  visualize_effective_regions.py  visualize_ui_annotation_regions.py
tests/: test_aitw_single_parser.py  test_common_parser.py  test_coordinate_reward.py  test_coordinates_and_metrics.py  test_inspect_raw_records.py  test_instruction_split.py  test_negative_sampling.py  test_parse_episodes.py  test_qdd_selection.py  test_schema.py  test_scorer_dataset.py  test_scorer_split_and_summary.py  (+2 more)
(+39 files in other folders)
